# AzureAgent

./: .dockerignore  .env.example  .gitignore  AzHelper.py  Dockerfile  README.md  README_ADF_Agent.md  adf_agent.py  async_az_login.py  entry_point.sh  ghMCP.py  github_streamlit_ui.py  hook.py  main-example.py  main.py  main_ui.py  nginx.conf  otel-collector-config.yaml  pyproject.toml  streamlit_ui.py  test_app_insights.py  test_app_insights_verbose.py  test_new_design.py  triage_agent_example.py
DAPEAgent/: agent_builder.py  config.py  shared_tools.py  triage_agent.py  triage_agent.yaml  utils.py
DAPEAgent/adf/: integration_runtime_agent.py  linked_services_agent.py  managed_pe_agent.py  pipelines_agent.py  triggers_agent.py
DAPEAgent/adf/prompts/: __init__.py  (+1 more)
DAPEAgent/azure/: __init__.py  triage_agent.py
DAPEAgent/azure_devops/: ado_agent.py
DAPEAgent/batch/: __init__.py  pool_agent.py
DAPEAgent/github/: config.py  github_mcp_agent.py
DAPEAgent/keyvault/: __init__.py  key_vault_agent.py  vault_agent.py
DAPEAgent/locks/: __init__.py  lock_agent.py
DAPEAgent/mcp/: azure_mcp_agent.py
DAPEAgent/prompts/: azure_mcp_prompt.yaml  integration_runtime_prompt.yaml  key_vault_prompt.yaml  linked_service_prompt.yaml  pipelines_prompt.yaml  triage_agent.yaml
DAPEAgent/utils/: __init__.py  azure_adapters.py
azure_tools/: __init__.py  auth.py  base.py  keyvault.py  subscription_resource.py
azure_tools/adf/: pipelines.py
end-to-end/: adf_agent.py  adf_agent_mcp.py  adf_server.py  ghMCP.py  main-example.py  openaiSDKAgent.py  streamlit_ui.py
(+14 files in other folders)
